--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<title>VITE IT UP!</title>
 		<script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
 		<link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet" />
+
+		<link rel="stylesheet" href="https://use.typekit.net/ylr0fqh.css" />
 	</head>
 	<body>
 		<div id="app"></div>
